increase padding-top to avoid overlapping between section and navbar

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ article {
 
 section{
   margin: 1rem var(--margin_from_edge);
-  padding-top: 3rem;
+  padding-top: 3.5rem;
 }
 
 header, main, footer {
